# qpx

./: .gitignore  404.html  README.adoc  README.md  absolute.avsc  differential.avsc  feature.avsc  ibaq_usecase.adoc  index.html  mkdocs.yml  mz.avsc  peptide.avsc  pg.avsc  protein.avsc  psm.avsc  pyproject.toml  requirements.txt  sitemap.xml  tools.adoc
cli-convert/: index.html
cli-project/: index.html
cli-reference/: index.html
cli-stats/: index.html
cli-transform/: index.html
cli-visualize/: index.html
community/: index.html
docs/: cli-convert.md  cli-project.md  cli-reference.md  cli-stats.md  cli-transform.md  cli-visualize.md  format-specification.md  index.md
examples-integration/: index.html
examples-overview/: index.html
examples-qc/: index.html
examples-quickstart/: index.html
examples-workflows/: index.html
features/: index.html
format-specification/: index.html
formats/: index.html
include/: example.feature.parquet
installation/: index.html
qpx/: qpxc.py
qpx/commands/convert/: diann.py  maxquant.py  quantms_project.py
qpx/commands/transform/: ae.py
qpx/commands/utils/: report.py
qpx/core/: common.py  metadata.py  sdrf.py
qpx/core/diann/: diann.py
qpx/core/maxquant/: maxquant.py
qpx/core/quantms/: mztab.py
qpx/operate/: plots.py
qpx/utils/: intensity_utils.py
quantmsio/commands/convert/: fragpipe.py  idxml.py  maxquant.py  quantms.py
quantmsio/commands/transform/: ae.py  anndata.py  de.py  gene.py  ibaq.py  spectra.py  uniprot.py
quantmsio/commands/utils/: plot.py  project.py  report.py  stats.py
quantmsio/core/: sdrf.py
quantmsio/core/maxquant/: maxquant.py
quickstart/: index.html
search/: search_index.json
tests/core/: test_metadata.py
tests/core/idxml/: test_idxml_integration.py
tests/core/quantms/: test_diann.py  test_intensity_utils.py  test_maxquant.py
workflow/: index.html
