[tool.poetry]
name = "qpx"
# The version will be dynamically read from __init__.py
version = "0.0.4"
description = "Convert multiple files into QPX format"
authors = ["BigBio Team <ypriverol@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bigbio/qpx"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["python", "multiomics", "proteomics", "quantms", "reanalysis"]
include = [
    "LICENSE",
    "**/*.xml",
]

[tool.poetry.dependencies]
python = ">=3.10"
click = "*"
pandas = "*"
requests = "*"
pyarrow = "*"
diskcache = "*"
pyopenms = ">=3.3.0,<3.5.0"
scipy = "*"
biopython = "*"
seaborn = "*"
numpy = "*"
matplotlib = "*"
duckdb = ">=1.1.3,<=1.3.0"
mygene = "*"
pyahocorasick = "*"
swifter = "*"
ddt = "*"
psutil = "*"
pyteomics = "*"
anndata = "*"
venn = "*"
plotly = ">=5.0.0"
scikit-learn = ">=1.5.0"
umap-learn = ">=0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-timeout = "*"
hypothesis = "*"

# Documentation
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"
markdown-exec = {extras = ["ansi"], version = ">=1.11.0"}

[tool.poetry.scripts]
qpxc = "qpx.qpxc:qpx_main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)$"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "large_data: marks tests as requiring large data files (deselect with '-m \"not large_data\"')",
]